--- a/src/app/components/dashboard/content/analytics/comming-appointments/comming-appointments.component.html
+++ b/src/app/components/dashboard/content/analytics/comming-appointments/comming-appointments.component.html
@@ -1,8 +1,8 @@
 <div class="main-container">
-    <h5>Les Rendez-vous en ettente</h5>
+    <h5>Les Rendez-vous en attente</h5>
     <div class="appointments">
         <p class="no-data-message" *ngIf="appointments.length ==0 ">
-            Aucun Rendez-vous pour le prochain mois
+            Aucun Rendez-vous en attente
         </p>
         <div class="appointment" *ngFor="let appointment of appointments">
 
