--- a/src/app/components/dashboard/content/documents-and-diagnosis/documents-and-diagnosis.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/documents-and-diagnosis.component.html
@@ -6,7 +6,7 @@
             <span>Documents</span>
         </a>
         <a [class.selected]="selectedOption == 'diagnosis'" routerLink="diagnosis">
-            <i class="fa fa-stethoscope"></i> <span>Diagnostqiues</span>
+            <i class="fa fa-stethoscope"></i> <span>Diagnostiques</span>
         </a>
     </div>
 
