--- a/src/app/components/dashboard/content/documents-and-diagnosis/documents-manager/documents-manager.component.css
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/documents-manager/documents-manager.component.css
@@ -6,4 +6,9 @@
     height: 560px;
     max-height: 560px;
     overflow: auto;
+    margin-bottom: 16px;
+}
+
+.no-data-message {
+    margin-top: 16px;
 }
