--- a/src/app/components/dashboard/content/patient-visit/visit-documents/document/document-info/document-info.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/document/document-info/document-info.component.html
@@ -13,8 +13,7 @@
             </p>
         </div>
     </div>
-
     <div class="created-date">
-        date de publication : <span>{{ createdAt }}</span>
+        Date de visite <span>{{ createdAt }}</span>
     </div>
 </div>
