--- a/src/app/components/dashboard/content/documents-and-diagnosis/diagnosis-manager/diagnosis-search-header/diagnosis-search-header.component.html
+++ b/src/app/components/dashboard/content/documents-and-diagnosis/diagnosis-manager/diagnosis-search-header/diagnosis-search-header.component.html
@@ -1,7 +1,7 @@
 <div class="main-container primary-radius">
     <div class="stretch-container">
         <div class="search-input">
-            <input type="text" [(ngModel)]="searchQuery.searchQuery" placeholder="Recherché par nom prénom naissance telephone email" class="primary-input">
+            <input type="text" [(ngModel)]="searchQuery.searchQuery" placeholder="Rechercher nom prénom date de n'assance telephone email" class="primary-input">
         </div>
         <div class="date-input">
             <select (change)="optionSelected()" [(ngModel)]="selectedOption">
@@ -9,7 +9,7 @@
             </select>
         </div>
         <div class="hint center-v">
-            <p>debute</p>
+            <p>Débute</p>
         </div>
         <div class="date-input">
             <input type="date" placeholder="Date de debut" class="primary-input" [(ngModel)]="searchQuery.startDate">
