--- a/src/app/components/dashboard/content/financial-manager/expenses-manager/expenses-header/expenses-header.component.html
+++ b/src/app/components/dashboard/content/financial-manager/expenses-manager/expenses-header/expenses-header.component.html
@@ -11,13 +11,13 @@
         </div>
         <div class="input-container  stretch-container">
             <div class="center-v">
-                Date d'ebut
+                Débute
             </div>
             <input type="date" class="primary-input" [(ngModel)]="searchQuery.startDate">
         </div>
         <div class="input-container  stretch-container">
             <div class="center-v">
-                Date fin
+                Fin
             </div>
             <input type="date" class="primary-input" [(ngModel)]="searchQuery.endDate">
         </div>
