--- a/src/app/components/dashboard/content/financial-manager/financial-manager.component.html
+++ b/src/app/components/dashboard/content/financial-manager/financial-manager.component.html
@@ -2,11 +2,11 @@
     <app-header></app-header>
     <div class="inner-navigation row">
         <a [class.selected]="selectedOption == 'expenses'" routerLink="expenses">
-            <i class="fa fa-fa fa-calendar-check"></i>
+            <i class="fa fa-coins"></i>
             <span>Les Frais</span>
         </a>
         <a [class.selected]="selectedOption == 'debt'" routerLink="debt">
-            <i class="fa fa-fa fa-calendar"></i> <span>Crédits</span>
+            <i class="fa fa-wallet"></i> <span>Crédits</span>
         </a>
     </div>
     <div class="body">
