--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.html
@@ -7,7 +7,7 @@
     </p>
     <div class="check-ups row" *ngIf="expand">
         <p *ngIf="controllable">
-            ajouter un paramétre pour
+            Ajouter un paramétre pour
             <span>{{checkUpType.name}}</span>
             <i class="fa fa-plus" (click)="addCheckUp()"></i>
         </p>
