--- a/src/app/components/dashboard/content/prescription-manager/certificats-models/certificats-models.component.html
+++ b/src/app/components/dashboard/content/prescription-manager/certificats-models/certificats-models.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="footer stretch-container">
-        <p>Si vous voualis crée un model de certificat médical ou compte-rendu</p>
+        <p>Si vous voulez créer un model de certificat médical ou compte-rendu</p>
         <div class="center-v">
             <button class="primary-button" (click)="openModelSubmitter = true">Ajouter <i class="fa fa-plus"></i></button>
         </div>
