--- a/src/app/components/dashboard/content/prescription-manager/prescription-models/prescription-models.component.css
+++ b/src/app/components/dashboard/content/prescription-manager/prescription-models/prescription-models.component.css
@@ -18,3 +18,13 @@
 .header {
     margin-bottom: 16px;
 }
+
+.no-data-message {
+    margin-top: 16px;
+}
+
+.body {
+    height: 580px;
+    max-height: 580px;
+    overflow: auto;
+}
