Side bar perfeected

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
 <div class="pop-up-window" *ngIf="showPopUpWindow">
     <app-pop-up-window></app-pop-up-window>
 </div>
-<div class="dashboard-container" [class.blur-filter]="showPopUpWindow" [class.active]="isActive">
+<div class="dashboard-container" [class.blur-filter]="showPopUpWindow">
     <div class="sidebar-section">
         <app-side-bar (activeEvent)="active()"></app-side-bar>
     </div>
