WaitingRoom appointment loader and new visit validation done

--- a/src/app/components/dashboard/content/waiting-room/appointments-loader/appointment/appointment.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-loader/appointment/appointment.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="white-background primary-radius center-v">
-        <button (click)="openVisitSubmitter()" class="secondary-button">Charger dans la salle d'attent</button>
+        <button (click)="openVisitSubmitter()" class="secondary-button">charge dans la salle d'attente        </button>
     </div>
 
 </div>
