--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/edit-visit/edit-visit.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/edit-visit/edit-visit.component.html
@@ -1,3 +1,3 @@
 <div class="main-container">
-    <app-patient-visit [isEdit]="true" [visit]="visit" [noHeader]="true"></app-patient-visit>
+    <app-patient-visit (closeEvent)="close($event)" [isEdit]="true" [visit]="visit" [noHeader]="true"></app-patient-visit>
 </div>
