Sympotmatic diagnosis perfected

--- a/src/app/components/diagnosis/all-symptoms/all-symptoms.component.html
+++ b/src/app/components/diagnosis/all-symptoms/all-symptoms.component.html
@@ -2,7 +2,7 @@
     <ul>
         <li class="part" *ngFor="let part of bodyParts" (click)="selectBodyPart(part)">
             <span>
-                {{part.location}}
+                {{part.name}}
             </span>
             <ul *ngIf="part.symptoms && selectedPart && selectedPart.id == part.id" class="symptoms-list">
                 <li class="symptom" *ngFor="let symptom of part.symptoms" [class.selected]="symptom.selected" (click)="selectSymptom($event , symptom)">
